# Godot-piper-plus

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES  project.godot
addons/godot_loop_mcp/: plugin.cfg  plugin.gd  plugin.gd.uid
addons/piper_plus/: LICENSE  README.md  THIRD_PARTY_LICENSES.txt  dictionary_editor.gd  dictionary_editor.gd.uid  download_catalog.gd  download_catalog.gd.uid  download_catalog.json  icon.svg.import  model_downloader.gd  model_downloader.gd.uid  multilingual_sample_text_catalog.gd  multilingual_sample_text_catalog.json  (+14 more)
cmake/: CombineStaticArchives.cmake  CopyIfExists.cmake  FindOnnxRuntime.cmake  HTSEngine.cmake  HTSEngine_CMakeLists.txt  OpenJTalk.cmake  OpenJTalk_CMakeLists.txt  PatchHTSEngine.cmake  patch_openjtalk.cmake
demo/: main.gd  main.tscn  project.godot
doc_classes/: PiperTTS.xml
docs/: milestones.md  requirements.md  web-github-pages-plan.md
pages_demo/: .gitignore  export_presets.cfg  main.gd  project.godot
src-file/: audio_queue.h  piper_language_support.cpp  piper_language_support.hpp  piper_runtime_support.cpp  piper_runtime_support.hpp  piper_tts.cpp  piper_tts.h  piper_tts_paths.cpp  piper_tts_paths.hpp  register_types.cpp  register_types.h
test/: prepare-assets.sh  run-tests.sh
tests/: CMakeLists.txt  test_audio_queue.cpp  test_custom_dictionary.cpp  test_english_phonemize.cpp  test_language_detector.cpp  test_openjtalk_error.cpp  test_openjtalk_security.cpp  test_phoneme_mapping.cpp  test_phoneme_parser.cpp  test_piper_core.cpp  test_streaming.cpp
tests/fixtures/: multilingual_capability_matrix.json  test_cmudict_data.json  test_dictionary_editor_legacy.json  test_dictionary_v1.json  test_dictionary_v2.json
tools/: sync_multilingual_capability_matrix.py  sync_multilingual_sample_text_catalog.py
(+120 files in other folders)
